--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "nice-data",
   "version": "0.1.0",
   "private": true,
+  "proxy": {
+    "/api": "http://localhost:3000"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -9,12 +12,15 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
+    "express": "^4.16.3",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "popper.js": "^1.14.4",
     "vue": "^2.5.17",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
