--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "blockchain.info": "^2.12.1",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "express": "^4.16.3",
