--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.22.2",
     "popper.js": "^1.14.4",
     "vue": "^2.5.17",
+    "vue-chartjs": "^3.4.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
