--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "blockchain.info": "^2.12.1",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.2",
+    "chartjs": "^0.3.24",
     "express": "^4.16.3",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
