--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
+    "npm": "^6.4.1",
     "popper.js": "^1.14.4",
     "vue": "^2.5.17",
     "vue-chartjs": "^3.4.0",
     "vue-router": "^3.0.1",
+    "vue-slider-component": "^2.8.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
